separating private and public routes
